# myowngit

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
lib/: CMakeLists.txt
lib/MyGit/: GitObject.h  GitRepository.cpp  GitRepository.h
lib/tests/: CMakeLists.txt
src/: CMakeLists.txt  blob.cpp  blob.h  command.cpp  command.h  gitobject.cpp  gitobject.h  main.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  testblob.cpp
